# compatibility-panel

./: .flake8  README.md  setup.cfg
data/preprint/: ho-compatibility_with_unfiltered_xy.keep
src/snpbias/annotation/: Annotator.py  BayesAnnotator.py  Chi2Annotator.py  FreqAnnotator.py
src/snpbias/entrypoints/: annotate_snp.py  parse_vcf.py  summarize_results.py
src/snpbias/parser/: CountParser.py  SNPParser.py
