[metadata]
name = snpbias
version = 1.0.0
author = Romain Fournier
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rmnfournier/snpbias
project_urls =
    Bug Tracker = https://github.com/rmnfournier/snpbias/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas

[options.extras_require]
dev = pytest; flake8
pypi = build; twine

[options.packages.find]
where = src